style/protfolio.css
/* nav styles */


.open-sans-normal {
  font-family: "Open Sans", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}
.head-section
{
    background-image: url('../images/developer.png'), url('../images/header_bg.png');
    background-repeat: no-repeat;
    background-position: top left, bottom right;
    max-width: 1600px;
    max-height: 837px;
}
nav
{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 150px
}

.nav-title 
{
    font-weight: 800;
    font-size: 45px;
}


/* Shared Style */

.text-center
{
    text-align: center;
}

.dark-2
{
    color: #474747;
}

/*  End */

.rr
{
    color: #FD6E0A;
}

nav ul li 
{
    list-style: none;
    margin-right: 50px;
}

nav li a 
{
    text-decoration: none;
    font-size: 20px;
}

nav ul 
{
    display: flex;
    align-items: center;
}

.btn-primary
{
    background-color: #FD6E0A;
    padding: 10px 20px;
    border-radius: 5px;
    border: none;
}

.btn-primary:hover
{
    background-color: rgb(183, 129, 233);
    cursor: pointer;
}
.banner
{
    display: flex;
}
.banner-greeting
{
    font-weight: 700;
    font-size: 45px;
}


.banner-title
{
font-size: 85px;
font-weight:bold;
}

.banner-content
{
    margin:0 150px 50px 150px ;
}
.profile-pic
{
    width:584px;
    height: 676px;
    
}

/* main style */

main
{
    max-width: 1140px;
    margin: 0 auto;
}
.secondary-bg
{
  background-color: #FFF8F3;
}
.section-title
{
    font-size: 35px;
    font-weight: bold;
    color: #181818;
}

.section-description
{
    font-size: 18px;
    color: #757575;
}

.about
{
    padding: 130px 157px;
    margin-top: 130px;
    text-align: center;
    border-radius: 10px;

}

.item-titile
{
    font-weight: 600;
}

.about-items
{
    display: flex;
    justify-content: space-around;
    
}

/* .about-item
{
    margin-bottom: 100px;
} */

.pad-con
{
    height: 320px;
    width: 827px;
    background-color: #FFFFFF;
    border: 1px solid black;
}

/* Skills section */
.skills-container
{
    display: flex;
    justify-content: space-around;
    gap: 24px;
}
.skills{
    margin-top: 130px;
    margin-bottom: 130px;

}
.skill
{
    width: 267px;
    height: 377px;
    background-color: #FFFFFF;
    border-radius: 5px;
    margin-top: 50px;
    padding: 30px;
    box-shadow:0px 6px 50px 0px rgba(0, 0, 0, 0.06);
}

.resume
{

}

.section-title
{
    text-align: center;
    font-size: 35px;
    font-weight: 800;
    color:#181818;
}

.resume-container
{
    display: flex;
    justify-content: space-around;
    align-items: center;
    gap: 71px;
}

.resume-title
{
    font-size:30px;
    font-weight:800;
}

.btn-download-cv
{
    margin-left:500px;
    margin-top: 50px;
}

/* footer style */

footer
{
    padding: 130px 230px;
    display: flex;
    gap: 100px;
    margin-top: 113px;

}

.footer-column{
    width: 50%;
}

footer input[type="text"], footer input[type="email"], footer textarea
{
    height:64px;
    border-radius: 5px;
    background-color: white;
    display: block;
    width: 100%;
    padding: 10px 20px;
    margin-bottom: 24px;
    border: none;
}

@media screen and (max-width:576px) {

    .skills-container,.resume-container,footer
    {
        flex-direction: column;
        gap: .1px;
        
    }

    footer
    {
        padding: 20px;
    }

    .footer-column{
    width: 100%;
}

footer input[type="text"], footer input[type="email"], footer textarea 
{
    width: calc(100% - 40px);
}
    
}

.hide 
{
    display: none;
}

/* @media screen and (max-width:576px) {

    main
    {
         max-width: 240px;
        margin: 0 auto;
    }

    .head-section
{
    background-image: url('../images/developer.png'), url('../images/header_bg.png');
    background-repeat: no-repeat;
    background-position: top left, bottom right;
    max-width: 240px;
    max-height: 837px;
}

    
} */

